Fix spacing issues on mobile

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -14,16 +14,22 @@
 
 .container {
   max-width: $width;
-  padding: 0 0.75rem;
+  padding: 0 1.5rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+@include small-breakpoint {
+  .container {
+    padding: 0 2rem;
+  }
 }
 
 .lead {
   font-size: 1.1rem;
   h1 {
     font-weight: 500;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     margin-bottom: 1.5rem;
   }
   .button {
@@ -80,7 +86,7 @@
     flex-direction: column;
   }
   h1 {
-    margin: .5rem 0;
+    margin: 0.5rem 0;
   }
   .post-meta {
     margin-bottom: 1rem;
@@ -93,7 +99,7 @@
     grid-template-columns: 180px 1fr;
     margin-bottom: 80px;
     h1 {
-      margin: 0 0 .5rem 0;
+      margin: 0 0 0.5rem 0;
     }
   }
 }
@@ -105,7 +111,7 @@
       display: grid;
       align-items: center;
       grid-template-columns: 60px 1fr;
-      padding: 1rem;
+      padding: .75rem;
       margin: 0;
       border-radius: $border-radius;
       border: 2px solid transparent;
@@ -135,11 +141,12 @@
   }
   h2 {
     font-size: 1.1rem;
+    line-height: 1.2;
     border-bottom: none;
     margin: 0;
   }
   .gatsby-image-wrapper {
-    margin-top: 0.5rem;
+    margin-top: 0;
     height: 40px !important;
     width: 40px !important;
   }
@@ -189,6 +196,7 @@
         margin: 0 -2rem;
         h2 {
           font-size: 1.2rem;
+          line-height: 1.3;
           margin: 0 0 0.75rem 0;
         }
         .gatsby-image-wrapper {
@@ -222,7 +230,7 @@
 .simple-posts {
   a {
     .each {
-      padding: 0.75rem;
+      padding: 0.5rem;
       margin: 0;
       border: 2px solid transparent;
       border-radius: $border-radius;
@@ -261,11 +269,9 @@
 
 .projects {
   .each {
-    display: grid;
-    grid-gap: 0.5rem;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 1rem 0;
   }
   h2 {
@@ -277,12 +283,10 @@
     margin: 0 0 0.5rem 0;
   }
   p {
+    display: none;
     color: $light-font-color;
     font-weight: normal;
     margin: 0;
-    grid-row-start: 2;
-    grid-column-start: 1;
-    grid-column-end: 3;
   }
   .button {
     margin-right: 0.5rem;
@@ -294,24 +298,19 @@
 @include small-breakpoint {
   .projects {
     .each {
+      display: grid;
       grid-template-columns: 2fr 5fr 3fr;
       grid-template-rows: none;
     }
     p {
+      display: block;
       margin: 0 1.5rem 0 0;
-      grid-row-start: initial;
-      grid-column-start: initial;
-      grid-column-end: initial;
     }
     .button {
       padding: 0.75rem 1.25rem;
       font-size: 1.1rem;
     }
   }
-}
-
-.buttons {
-  margin-left: auto;
 }
 
 .tag-container {
@@ -445,7 +444,7 @@ blockquote {
     background: white;
     border-radius: $border-radius;
     box-shadow: $box-shadow;
-    padding: 2rem;
+    padding: 1.5rem;
   }
   h2 {
     border-bottom: 0;
